EUDPA-189 Notification list with pagination